<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChitChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="password">Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="name_and_surname">Name and surname</string>
    <string name="imie_pacjent_register">Imię</string>
    <string name="nazwisko_pacjent_register">Nazwisko</string>
    <string name="pesel_pacjent_register">Pesel</string>
    <string name="telefon_pacjent_register">Telefon</string>
    <string name="email_pacjent_register">E-Mail</string>
    <string name="adres_pacjent_register">Adres</string>
    <string name="register_as_pacjent">Zarejestruj się jako pacjent</string>
    <color name="blue01">#0099CC</color>
    <color name="blue02">#079DD0</color>
    <color name="blue03">#0FA1D3</color>
    <color name="blue04">#16A5D7</color>
    <color name="blue05">#1DA9DA</color>
    <color name="blue06">#24ADDE</color>
    <color name="blue07">#2CB1E1</color>
    <color name="blue08">#33B5E5</color>
    <color name="blue09">#50C0E9</color>
    <color name="blue10">#6DCAEC</color>
    <color name="blue11">#8AD5F0</color>
    <color name="blue12">#A8DFF4</color>
    <color name="blue13">#C5EAF8</color>
    <color name="blue14">#E2F4FB</color>

    <color name="purple01">#9933CC</color>
    <color name="purple02">#A041D0</color>
    <color name="purple03">#A750D3</color>
    <color name="purple04">#AC59D6</color>
    <color name="purple05">#B368D9</color>
    <color name="purple06">#BA75DC</color>
    <color name="purple07">#C182E0</color>
    <color name="purple08">#C58BE2</color>
    <color name="purple09">#CB97E5</color>
    <color name="purple10">#CF9FE7</color>
    <color name="purple11">#D6ADEB</color>
    <color name="purple12">#DDBCEE</color>
    <color name="purple13">#E5CAF2</color>
    <color name="purple14">#F5EAFA</color>

    <color name="green01">#669900</color>
    <color name="green02">#6DA000</color>
    <color name="green03">#75A800</color>
    <color name="green04">#7CAF00</color>
    <color name="green05">#83B600</color>
    <color name="green06">#8ABD00</color>
    <color name="green07">#92C500</color>
    <color name="green08">#99CC00</color>
    <color name="green09">#A8D324</color>
    <color name="green10">#B6DB49</color>
    <color name="green11">#C5E26D</color>
    <color name="green12">#D3E992</color>
    <color name="green13">#E2F0B6</color>
    <color name="green14">#F0F8DB</color>

    <color name="orange01">#FF8A00</color>
    <color name="orange02">#FF9105</color>
    <color name="orange03">#FF9909</color>
    <color name="orange04">#FFA00E</color>
    <color name="orange05">#FFA713</color>
    <color name="orange06">#FFAE18</color>
    <color name="orange07">#FFB61C</color>
    <color name="orange08">#FFBD21</color>
    <color name="orange09">#FFC641</color>
    <color name="orange10">#FFD060</color>
    <color name="orange11">#FFD980</color>
    <color name="orange12">#FFE3A0</color>
    <color name="orange13">#FFECC0</color>
    <color name="orange14">#FFF6DF</color>

    <color name="red01">#CC0000</color>
    <color name="red02">#D30A0A</color>
    <color name="red03">#DB1313</color>
    <color name="red04">#E21D1D</color>
    <color name="red05">#E92727</color>
    <color name="red06">#F03131</color>
    <color name="red07">#F83A3A</color>
    <color name="red08">#FF4444</color>
    <color name="red09">#FF5F5F</color>
    <color name="red10">#FF7979</color>
    <color name="red11">#FF9494</color>
    <color name="red12">#FFAFAF</color>
    <color name="red13">#FFCACA</color>
    <color name="red14">#FFE4E4</color>

</resources>
