<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue04"
    android:orientation="vertical"
    android:padding="15dp">


    <EditText
        android:id="@+id/imie_pacjent_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"

        android:hint="@string/imie_pacjent_register"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/nazwisko_pacjent_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nazwisko_pacjent_register"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/pesel_pacjent_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@+id/pesel_pacjent_register"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/telefon_pacjent_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/telefon_pacjent_register"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/email_pacjent_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_pacjent_register"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/adres_pacjent_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/adres_pacjent_register"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <RadioGroup
        android:id="@+id/gender_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/woman_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Kobieta" />

        <RadioButton
            android:id="@+id/man_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="Mężczyzna" />
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register_as_pacjent"
        android:onClick="registerPacjent"/>
</LinearLayout>