<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue06"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/login_string"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_entry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/login_string"
        android:inputType="textPersonName"
        android:textColor="@color/material_blue_grey_800" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/material_blue_grey_800" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:onClick="logIn"
        android:text="@string/connect"
        android:textSize="20sp"
        android:background="@color/blue01"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="register"
        android:background="@color/blue01"
        android:text="@string/register_string"
        android:textSize="20sp" />

</LinearLayout>